# adventofcode2021

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
01/: 01.py
02/: 02.py
03/: 03.py
04/: 04.py
05/: 05.py
06/: 06.py
07/: 07.py
08/: 08.py
09/: 09.py
10/: 10.py
